; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_stash.c_assert_stash_ref.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_stash.c_assert_stash_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stash_info = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"'%s' is not a stash reference\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stash_info*)* @assert_stash_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_stash_ref(%struct.stash_info* %0) #0 {
  %2 = alloca %struct.stash_info*, align 8
  store %struct.stash_info* %0, %struct.stash_info** %2, align 8
  %3 = load %struct.stash_info*, %struct.stash_info** %2, align 8
  %4 = getelementptr inbounds %struct.stash_info, %struct.stash_info* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %17, label %7

7:                                                ; preds = %1
  %8 = call i32 @_(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.stash_info*, %struct.stash_info** %2, align 8
  %10 = getelementptr inbounds %struct.stash_info, %struct.stash_info* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @error(i32 %8, i32 %12)
  %14 = load %struct.stash_info*, %struct.stash_info** %2, align 8
  %15 = call i32 @free_stash_info(%struct.stash_info* %14)
  %16 = call i32 @exit(i32 1) #3
  unreachable

17:                                               ; preds = %1
  ret void
}

declare dso_local i32 @error(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @free_stash_info(%struct.stash_info*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
